# dactory

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: tests.yml
python/dactory/: __init__.py  bloom_filter.py  create.py  document.py  download_models.py  gopher.py  language_detector.py  main.py  minhash_dedup.py  profiling.py  rewinding.py  scoring.py  warc_groups.py  zstd_writer.py
src/: bloom.rs  code.rs  entry.rs  gopher.rs  lib.rs  minhash.rs  repetitions.rs
tests/rust/: test_gopher.py  test_minhash.py  test_repetitions.py
