[package]
name = "dactory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dactory"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
clap = { version = "4.5.19", features = ["derive"] }
fasttext = "0.7.8"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-java = "0.20"
pyo3 = "0.24.0"
