[project]
name = "dactory"
description = "The data factory"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.11.3",
    "beartype>=0.20.2",
    "fastwarc==0.14.9",
    "line-profiler>=4.2.0",
    "numpy<2",
    "requests>=2.32.3",
    "resiliparse==0.14.9",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
    "zstandard>=0.23.0",
    "fasttext==0.9.3",
    "maturin>=1.8.3",
    "pre-commit>=4.2.0",
    "retry>=0.9.2",
    "huggingface-hub>=0.30.2",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
dactory = "dactory.main:main"

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    { file = "src/**/*.rs" }, 
    { file = "Cargo.toml" }, 
    { file = "Cargo.lock" }, 
    { file = "pyproject.toml" }, 
    { file = "uv.lock" }
]
python-preference = "only-managed"

[tool.ruff]
line-length = 95

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
